# tm-vhdlproducer

./: 00ReadMe.txt  CHANGELOG.md  MANIFEST.in  Makefile  README  README.md  README.txt  changelog  eventsetup_util.py  gen_map.py  menuReporter.py  multi_module.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tmVhdlProducer.py  tox.ini  vhdlproducer.py
.github/workflows/: python-package.yml
config/: readme_factors_4_resources.txt  resource_comb.csv  resource_default.json  resource_dist.csv  resource_mass.csv  resource_sim.json
doc/: templates_overview.dia
jinjaTemplates/: algo_mapping_rop.ja.vhd  algo_mapping_rop.vhd  gtl_module.vhd  gtl_pkg.vhd  instance_muon_condition.ja.vhd  menu.json  reporter.html  reporter.twiki.j2  signal_eta_phi.ja.vhd
jinjaTemplates/reporterTemplates/: algos.j2.html  condition_details.j2.html  iterate_all_conditions.j2  (+1 more)
lib/: tmVhdlProducer.py
scripts/: tm-reporter  tm-vhdl-producer  tm-vhdlproducer
templates/: algo_mapping_rop.vhd  assignment_a_a_f.vhd  assignment_a_a_p.vhd  assignment_a_b_p.vhd  assignment_finor_mask.vhd  assignment_finor_veto_masks.vhd  assignment_prescale_factor.vhd  assignment_veto_mask.vhd  gtl_module.vhd  gtl_module_instances.vhd  gtl_module_signals.vhd  gtl_pkg.vhd  instance_algorithm.vhd  instance_calo_calo_correlation_condition.vhd  instance_calo_condition.vhd  instance_calo_condition_v2.vhd  instance_calo_esums_correlation_condition.vhd  instance_calo_muon_correlation_condition.vhd  instance_delta_r_condition.vhd  instance_difference_eta_corr.vhd  instance_difference_eta_wsc.vhd  instance_difference_phi_corr.vhd  instance_difference_phi_wsc.vhd  instance_esums_condition.vhd  instance_eta_phi_conversion.vhd  instance_eta_phi_conversion_muon.vhd  instance_invariant_mass.vhd  instance_muon_charge_correlations.vhd  instance_muon_charges.vhd  instance_muon_condition.vhd  instance_muon_esums_correlation_condition.vhd  signal_algorithm.vhd  signal_differences_corr.vhd  signal_differences_wsc.vhd  signal_eta_phi.vhd  signal_muon_charge_correlations.vhd  signal_muon_charges.vhd  tb_invariant_mass.vhd
test/: test.py  updateMenu.py
tests/: test.py  test_vhdlhelper.py  test_vhdlproducer.py  updateMenu.py
tmVhdlProducer/: __init__.py  __main__.py  algodist.py  configschema.py  constants.py  handles.py  main.py  reporter.py  tmVhdlProducer.py  validate.py  vhdlhelper.py  vhdlproducer.py
utils/: tplrcc
(+404 files in other folders)
