[metadata]
name = tm-vhdlproducer
version = attr: tmVhdlProducer.__version__
url = https://github.com/cms-l1-globaltrigger/tm-vhdlproducer
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
description = Generate VHDL implementation from XML trigger menu.
long_description = file: README.md
license = GPLv3
classifiers =
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
test_suite = tests
python_requires = >=3.6
install_requires =
    Jinja2==2.11.*
    markupsafe==2.0.*
    schema==0.7.5
    tm-python @ git+https://github.com/cms-l1-globaltrigger/tm-python@0.12.0
    tm-reporter @ git+https://github.com/cms-l1-globaltrigger/tm-reporter@2.12.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    tm-vhdlproducer = tmVhdlProducer.__main__:main

[options.package_data]
tmVhdlProducer =
    config/*.json
    templates/vhdl/*.vhd
    templates/vhdl/menu.json
    templates/vhdl/instances/*.vhd
    templates/vhdl/instances/base/*.vhd
    templates/vhdl/signals/*.vhd
